Create a new property which can be used to control the encoding used for data export.  It seems that there are bugs which mean that this may currently be necessary for languages other than English (Japanese characters get changed to question marks).  But the concept is likely to remain useful even after those are resolved -- especially if the encoding for the output becomes something which can be specified on a per request basis, or based on the language of the client.
If the encoding for data export is left unspecified, the behavior should
be unchanged.  The token DATA_EXPORT_ENCODING has been added; it is used
to fill in the configuration value:

        scarab.dataexport.encoding

which is used (if specified) for the encoding.

* src/java/org/tigris/scarab/screens/DataExport.java: get the
  configuration value "scarab.dataexport.encoding" and, if it is set,
  tell the servlet container to use that encoding when getWriter is
  called by including it in the Content-Type which is set

* build/build.xml: include a filter for DATA_EXPORT_ENCODING

* build/default.properties: include the new property
  (scarab.dataexport.encoding) with a default empty value

* src/conf/Scarab.properties: include the new property, using the token
  DATA_EXPORT_ENCODING

Issue number:  18139
Reviewed by:   Daniel Rall <dlr@finemaltcoding.com>

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -20,6 +20,11 @@ scarab.build.version=@VERSION@-@BUILD_DATE@
 # in order to support multi-language use.
 scarab.email.encoding=@EMAIL_ENCODING@   
 
+# This encoding is used for data export operations where different encodings
+# are valid (xml requires that the output always be UTF-8).  In particular,
+# that means TSV and Excel output.
+scarab.dataexport.encoding=@DATA_EXPORT_ENCODING@
+
 # Site name
 scarab.site.name=@SCARAB_SITE_NAME@
 
