Allow contrib/struts-legacy/build.xml to inherit properties, the only effect of this is that the 'target' directory used is the main struts 'target' but that is ok. This way gump might have a change to work.

--- a/build.xml
+++ b/build.xml
@@ -399,7 +399,7 @@
 -->
     <target name="dist.legacy" >
         <ant antfile="build.xml" dir="contrib/struts-legacy"
-             inheritAll="false" target="dist"/>
+              target="dist"/>
     </target>
 
 
