--- a/contrib/struts-el/build.xml
+++ b/contrib/struts-el/build.xml
@@ -59,7 +59,7 @@
  <!-- Default values for unspecified properties -->
  <property name="jdbc20ext.jar" value="../jdbc2_0-stdext.jar"/>
  <property name="servlet.jar" value="../jakarta-servletapi/lib/servlet.jar"/>
- <property name="struts.jar" value="../jakarta-struts/dist/lib/struts.jar"/>
+ <property name="struts.jar" value="../../dist/lib/struts.jar"/>
  <property name="struts-el.jar"
            value="dist/lib/struts-el.jar"/>
  <property name="jstl.home" value="../jakarta-taglibs/dist"/>
@@ -158,7 +158,6 @@
   <pathelement location="${commons-validator.jar}"/>
   <pathelement location="${jdbc20ext.jar}"/>
   <pathelement location="${servlet.jar}"/>
-  <pathelement location="${struts-legacy.jar}"/>
   <pathelement location="${struts.jar}"/>
   <pathelement location="${struts-el.jar}"/>
   <pathelement location="${jstl.jar}"/>
@@ -214,15 +213,13 @@
         tofile="${build.home}/library/commons-validator.jar"/>
   <copy file="${jakarta-oro.jar}"
         tofile="${build.home}/library/jakarta-oro.jar"/>
-  <copy file="${struts-legacy.jar}"
-        tofile="${build.home}/library/struts-legacy.jar"/>
 <!-- Compile-time dependency only
   <copy file="${jdbc20ext.jar}"
         tofile="${build.home}/library/jdbc2_0-stdext.jar"/>
 -->
   <copy todir="${build.home}/library">
    <fileset dir="${jstl.home}/tld" includes="*.tld"/>
-   <fileset dir="${struts.home}/lib" includes="*.tld"/>
+   <fileset dir="${struts.home}/dist/lib" includes="*.tld"/>
   </copy>
  </target>
 
