--- a/build.xml
+++ b/build.xml
@@ -8,7 +8,7 @@
 	<!-- here we should use the cvs-verion info for automatic replace the version -->
 	<property name="version" value="0.10.0"/>
 	<property name="dest" value="./classes"/>
-	<property name="ownclasspath" value="${classpath}:${src}/lib/xalan.jar:${src}/lib/jaxp.jar:${src}/lib/log4j.jar:${src}/lib/lucene-1.3-rc1.jar:${src}/lib/junit.jar:${src}/lib/jakarta-oro-2.0.6.jar:${src}/lib/jargs.jar:${src}/lib/jwizz-0.1.0-alpha.jar"/>
+	<property name="ownclasspath" value="${classpath}:${src}/lib/xalan.jar:${src}/lib/jaxp.jar:${src}/lib/log4j.jar:${src}/lib/lucene-1.3-rc1.jar:${src}/lib/junit.jar:${src}/lib/jakarta-oro-2.0.6.jar:${src}/lib/jargs.jar:${src}/lib/jwizz-0.1.0-beta.jar"/>
 
 
 	<!-- definition of the task to check the style of the java-code -->
@@ -135,7 +135,7 @@
 			<exclude name="native/**"/>
 			<manifest>
 				<attribute name="Main-Class" value="org.columba.core.main.Main"/>
-				<attribute name="Class-Path" value="lib/xalan.jar lib/jaxp.jar lib/crimson.jar lib/log4j.jar lib/junit.jar lib/jakarta-oro-2.0.6.jar lib/lucene-1.3-rc1.jar lib/jargs.jar"/>
+				<attribute name="Class-Path" value="lib/xalan.jar lib/jaxp.jar lib/crimson.jar lib/log4j.jar lib/junit.jar lib/jakarta-oro-2.0.6.jar lib/lucene-1.3-rc1.jar lib/jargs.jar lib/jwizz-0.1.0-beta.jar"/>
 				<attribute name="Sealed" value="false"/>
 			</manifest>
 		</jar>
@@ -305,6 +305,7 @@ else echo "cannot find columba.jar in `pwd`"; fi
            <include name="lib/junit.jar"/>
            <include name="lib/jakarta-oro-2.0.6.jar"/>
            <include name="lib/jargs.jar"/>
+	   <include name="lib/jwizz-0.1.0-beta.jar"/>
           </fileset>
          </signjar>
         </target>
