--- a/build.xml
+++ b/build.xml
@@ -395,15 +395,6 @@
     </target>
 
 <!--
-        Construct distributable struts legacy support for datasources
--->
-    <target name="dist.legacy" >
-        <ant antfile="build.xml" dir="contrib/struts-legacy"
-              target="dist"/>
-    </target>
-
-
-<!--
         Build the contrib modules that are packaged with the binary
 -->
     <target name="dist.contrib" depends="dist.source" if="jstl.jar">
@@ -427,7 +418,7 @@
         Construct complete binary distribution
 -->
     <target name="dist"
-         depends="dist.legacy,dist.library,dist.webapps,dist.source,dist.contrib"
+         depends="dist.library,dist.webapps,dist.source,dist.contrib"
      description="Construct binary distribution"/>
 
 <!--
@@ -727,20 +718,11 @@
         </copy>
 
     </target>
-    
-<!--
-       Clean struts legacy distribution
--->
-    <target name="clean.legacy" >
-        <ant antfile="build.xml" dir="contrib/struts-legacy" 
-        inheritall="false" target="clean"/>
-    </target>
-
 
 <!--
         Clean up build and distribution directories
 -->
-    <target name="clean" depends="clean.legacy"
+    <target name="clean"
      description="Clean build and distribution directories">
         <delete dir="${build.home}"/>
         <delete dir="${dist.home}"/>
