--- a/ext/trace.properties
+++ b/ext/trace.properties
@@ -8,7 +8,7 @@
 # Log configuration file #
 ##########################
 
-# $Id: trace.properties,v 1.3 2003/05/22 07:38:55 nieuviar Exp $
+# $Id: trace.properties,v 1.4 2003/06/19 13:52:00 riviereg Exp $
 
 # Define which wrapper to use (= log4j)
 log.config.classname org.objectweb.util.monolog.wrapper.log4j.MonologLoggerFactory
@@ -38,6 +38,7 @@ logger.org.objectweb.additivity false
 logger.org.objectweb.carol.level INFO
 logger.org.objectweb.carol.rmi.level INFO
 logger.org.objectweb.carol.jndi.level INFO
+logger.org.objectweb.carol.export.level INFO
 logger.org.objectweb.carol.cmi.des.level INFO
 logger.org.objectweb.carol.cmi.jndi.level INFO
 logger.org.objectweb.carol.cmi.registry.level INFO
