* src/conf/TurbineResources.properties   torque.dsfactory.scarab.pool.defaultMaxWait: Property to add a   timeout on waiting for a database connection.
Submitted by: John McNally
Issue: PCN19169

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.129 2003/04/29 20:22:49 jon Exp $
+# $Id: TurbineResources.properties,v 1.130 2003/06/20 00:38:04 dlr Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -431,6 +431,7 @@ torque.database.scarab.adapter=@DATABASE_TYPE@
 torque.dsfactory.scarab.factory=\
   org.apache.torque.dsfactory.Jdbc2PoolDataSourceFactory
 torque.dsfactory.scarab.pool.defaultMaxActive=30
+torque.dsfactory.scarab.pool.defaultMaxWait=30000
 torque.dsfactory.scarab.pool.testOnBorrow=true
 torque.dsfactory.scarab.pool.validationQuery=@DATABASE_VALIDATION_QUERY@
 torque.dsfactory.scarab.connection.driver = @DATABASE_DRIVER@
