--- a/plugins/org.columba.mail.SpamAssassinPOP3PreProcessingFilter/plugin.xml
+++ b/plugins/org.columba.mail.SpamAssassinPOP3PreProcessingFilter/plugin.xml
@@ -5,5 +5,5 @@
  <extension name="org.columba.mail.pop3preprocessingfilter">
   <pop3preprocessingfilter name="SpamAssassin" class="SpamAssassinPOP3PreProcessingFilterPlugin"/>
  </extension>
- <runtime type="java"/>
+ <runtime type="java" jar="SpamAssassinPOP3preProcessingFilter.jar"/>
 </plugin>
