--- a/tests/build.xml
+++ b/tests/build.xml
@@ -116,7 +116,7 @@
                                      VariaLevelRangeFilter, PatternParser,
                                      LevelMatchFilter, DRFA, Plugins, 
                                      SizeBasedRolling, Compress, 
-                                     TimeBasedRolling"/>
+                                     TimeBasedRolling, ReaderWriterLock"/>
 
   <!-- ================================================================= -->
   <!-- Longer unit tests                                                 -->
@@ -161,6 +161,7 @@
 
   <target name="DOM" depends="build, cleanOutputDir">
     <junit printsummary="yes" fork="yes" haltonfailure="yes">
+      <jvmarg value="-Dlog4j.debug=TRUE"/>
       <classpath refid="tests.classpath"/>
       <formatter type="plain" usefile="false"/>
       <test name="org.apache.log4j.xml.DOMTestCase" />
@@ -412,7 +413,7 @@
  
   <target name="ReaderWriterLock" depends="build, cleanOutputDir">
     <junit printsummary="yes" fork="no" haltonfailure="yes"> 
-      <sysproperty key="runLen" value="10000"/>     
+      <sysproperty key="runLen" value="100"/>     
       <classpath refid="tests.classpath"/>
       <formatter type="plain" usefile="false"/>
       <test name="org.apache.log4j.helpers.ReaderWriterLockTestCase" />
