Changes to build process to take into consideration the new pattern directory.
Ceki, is this right?  I had to make this change to get a valid jar for Chainsaw 2.

--- a/build.xml
+++ b/build.xml
@@ -198,6 +198,7 @@
                     **/StressCategory.java,
                     **/doc-files/*,
                     ${stem}/xml/**,
+                    ${stem}/pattern/**,
                     ${stem}/test/serialization/**,
 	            ${stem}/net/SMTPAppender.java,
                	    ${stem}/net/JMS*.java,
@@ -414,6 +415,7 @@
 		${stem}/rolling/*.class,
 		${stem}/xml/*.class,
 		${stem}/jmx/*.class,
+		${stem}/pattern/*.class,
 		${stem}/or/*.class,
 		${stem}/or/sax/*.class,
     ${stem}/or/jms/*.class,
