--- a/tests/build.xml
+++ b/tests/build.xml
@@ -206,6 +206,7 @@
     <!-- test handling of log4j.defaultInitOverride system property -->
     <copy file="input/xml/defaultInit.xml" tofile="classes/log4j.xml"/>
     <junit printsummary="yes" fork="yes" haltonfailure="yes">
+      <jvmarg value="-Dlog4j.defaultInitOverride=true" /> 
       <classpath refid="tests.classpath"/>
       <formatter type="plain" usefile="false"/>
       <test fork="true" name="org.apache.log4j.defaultInit.TestCase1" />
