--- a/build.xml
+++ b/build.xml
@@ -137,7 +137,7 @@
     <property name="project.name" value="jakarta-struts"/>
 
     <!-- Version of the project -->
-    <property name="project.version" value="1.1-dev"/>
+    <property name="project.version" value="1.1"/>
 
 
 <!-- ========== Derived Properties ======================================== -->
