--- a/src/share/org/apache/struts/actions/LocalStrings.properties
+++ b/src/share/org/apache/struts/actions/LocalStrings.properties
@@ -2,7 +2,7 @@ dispatch.error=Dispatch[{0}] to method {1} returned an exception
 dispatch.handler=DispatchMapping[{0}] does not define a handler property
 dispatch.mapping=ActionMapping[{0}] is not of type DispatchMapping
 dispatch.method=Action[{0}] does not contain method named {1}
-dispatch.parameter=Request[{0}] does not contain handler parameter named {1}
+dispatch.parameter=Request[{0}] does not contain handler parameter named {1}.  This may be caused by whitespace in the label text.
 dispatch.return=Action[{0}] invalid return type for method {1}
 forward.path=No context-relative URI specified via the 'parameter' attribute
 forward.rd=Cannot create request dispatcher for path {0}
