--- a/documentation/cookbook/cookbook.in
+++ b/documentation/cookbook/cookbook.in
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
-<!-- $Id: cookbook.xml,v 1.106 2003/05/31 10:35:35 linus Exp $ -->
+<!-- $Id: cookbook.in,v 1.1 2003/07/07 01:59:10 linus Exp $ -->
 
 <!DOCTYPE book SYSTEM "../docbook-setup/docbookx/docbookx.dtd" [
 <!ENTITY building SYSTEM "building.xml">
@@ -15,6 +15,9 @@
 <!ENTITY componentinternationalization SYSTEM "compi18n.xml">
 <!ENTITY cookbookmodules SYSTEM "cookbook_modules.xml">
 <!ENTITY cookbooklogging SYSTEM "cookbook_logging.xml">
+
+<!ENTITY argoversion    "@VERSION@">
+
 ]>
 
 <!-- THIS IS THE ARGO/UML DEVELOPER COOKBOOK 
@@ -24,7 +27,7 @@
      DOCUMENTATION MODULE UNDER THE DIRECTORY COOKBOOK
      - PLEASE VERIFY THAT YOUR CHANGES COMPILE CORRECTLY BEFORE COMMITING THEM
 -->
-     
+
 <book>
      <bookinfo>
          <date>2001-11-10
@@ -35,6 +38,10 @@
       <para>
 The purpose of this Cookbook is to help in coordinating 
 and documenting the development of ArgoUML.
+</para>
+      <para>
+This version of the cookbook is loosely connected to the version
+&argoversion; of ArgoUML.
 </para>
     </abstract>
          <authorgroup>
